--- a/checkerboard/static/css/style.css
+++ b/checkerboard/static/css/style.css
@@ -1,8 +1,13 @@
-.row{
-    height: 50px;
+td{
+    width:50px;
+    height:50px
 }
 
-.col{
-    width: 50px;
-    height: 50px
+
+.color1{
+    background-color: lightblue
+}
+
+.color2{
+    background-color: rgb(144, 112, 112)
 }
