--- a/checkerboard/templates/index.html
+++ b/checkerboard/templates/index.html
@@ -8,8 +8,20 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
 <title>Checkboard App</title>
+<style>
+.color1{
+    background-color: {{ color1 }};
+}
+
+.color2{
+    background-color: {{ color2 }};
+}
+
+</style>
 </head>
 <body>
 
@@ -19,85 +31,18 @@
             <h1>Checkerboard App</h1>
         </div>
     </div>
-    <div class="row mx-auto">
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-    </div>
-    <div class="row mx-auto">
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-    </div>
-    <div class="row mx-auto">
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-    </div>
-    <div class="row mx-auto">
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-    </div>
-    <div class="row mx-auto">
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-    </div>
-    <div class="row mx-auto">
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-    </div>
-    <div class="row mx-auto">
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-    </div>
-    <div class="row mx-auto">
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
-        <div class="col bg-warning"></div>
-        <div class="col bg-dark"></div>
+    <div class="row justify-content-center">
+        <div class="col-auto">
+            <table>
+                {% for r in range(num_rows) %}
+                    <tr>
+                        {% for c in range(num_cols) %}
+                        <td class="color{{ (r+c)%2+1 }}"></td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
     </div>
 
 </div>
